<?xml version="1.0"?>
<package format="3">
  <name>pointcloud_server</name>
  <version>0.0.1</version>
  <description>ROS2 package wrapping a rolling voxel grid for pointcloud processing</description>
  <maintainer email="Maik.Knof@gmx.com">Maik Knof</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>pointcloud_server_interfaces</depend>
  
  <depend>rclcpp</depend>
  <depend>eigen3_cmake_module</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
