<?xml version="1.0"?>
<package format="3">
  <name>pointcloud_server_interfaces</name>
  <version>0.0.1</version>
  <description>Custom service interfaces for the pointcloud_server package</description>
  <maintainer email="Maik.Knof@gmx.de">Maik Knof</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>